feat: user role GlobalExceptionHandler updated!